# pilot

./: Cargo.toml  readme.md
src/: bot.rs  error.rs  lib.rs  method.rs  typing.rs
src/method/: info.rs  inline.rs  mod.rs  send.rs  updating.rs  webhook.rs
src/methods/: basic.rs  mod.rs  update.rs
