[package]
name = "pilot"
version = "0.0.3"
authors = ["Kilerd <blove694@gmail.com>"]
edition = "2018"
description = "the pilot manipulating telegram bot"
readme = "readme.md"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_with = "1.9"
surf = "2.2"
tokio = { version = "1.9", features = ["macros","rt-multi-thread", "time"] }

[features]
default = []

[dev-dependencies]
serde_json = "1.0.64"
