[package]
name = "pilot"
version = "0.0.5"
authors = ["Kilerd <blove694@gmail.com>"]
edition = "2018"
description = "the pilot manipulating telegram bot"
readme = "readme.md"
license = "MIT"

[dependencies]
log = "0.4.14"
reqwest = { version = "0.11.4", features = ["default", "json"] }
serde = { version = "1", features = ["derive"] }
serde_with = "1.9"
thiserror = "1.0.28"
tokio = { version = "1.9", features = ["macros","rt-multi-thread", "time"] }

[features]
default = []

[dev-dependencies]
serde_json = "1.0.64"
